apps/legal/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: legal
spec:
  selector:
    app: legal
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 3000
